@@ -69,7 +69,7 @@
     typedef Teuchos::ScalarTraits<Scalar>                                     ST;
     const Ordinal numRows = 0;
     Teuchos::ArrayRCP<Ordinal> ptrs(1); ptrs[0] = 0;
-    RCP<GRPH> G = rcp( new GRPH(numRows,node,null) );
+    RCP<GRPH> G = rcp( new GRPH(numRows,numRows,node,null) );
     RCP<MAT>  A = rcp( new MAT(G,null) );
     G->setStructure(ptrs,null);
     A->setValues(null);
